# desktop-tutorial

install/: local_setup.sh  setup.sh
install/ebimu_pkg/lib/ebimu_pkg/: ebimu_driver  ebimu_publisher  ebimu_subscriber
install/ebimu_pkg/share/ebimu_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ebimu_pkg/share/ebimu_pkg/launch/: ebimu.launch.py
install/localization_layer/share/localization_layer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/localization_layer/share/localization_layer/cmake/: localization_layerConfig.cmake
install/localization_layer/share/localization_layer/config/: cartographer_2d.lua  ekf_localization.yaml
install/localization_layer/share/localization_layer/launch/: localization_layer.launch.py
install/sensor_layer/share/ament_index/resource_index/package_run_dependencies/: sensor_layer
install/sensor_layer/share/ament_index/resource_index/parent_prefix_path/: sensor_layer
install/sensor_layer/share/sensor_layer/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sensor_layer/share/sensor_layer/cmake/: sensor_layerConfig.cmake
install/sensor_layer/share/sensor_layer/config/: sensor_params.yaml
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: package.sh
install/sllidar_ros2/share/sllidar_ros2/launch/: sllidar_t1_launch.py
install/tf_manager_cpp/lib/tf_manager_cpp/: sensor_static_tf  wheel_odom_tf
install/tf_manager_cpp/share/ament_index/resource_index/parent_prefix_path/: tf_manager_cpp
install/tf_manager_cpp/share/tf_manager_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/ebimu_pkg/: package.xml  setup.cfg  setup.py
src/ebimu_pkg/ebimu_pkg/: ebimu_publisher.py  ebimu_subscriber.py
src/localization_layer/: CMakeLists.txt  package.xml
src/localization_layer/config/: cartographer_2d.lua  map_builder.lua  pose_graph.lua  trajectory_builder.lua
src/localization_layer/launch/: mapping_cartographer.launch.py
src/sensor_layer/: CMakeLists.txt
src/sensor_layer/launch/: sensor_layer.launch.py
src/tf_manager_cpp/: CMakeLists.txt  package.xml
src/tf_manager_cpp/launch/: tf_manager.launch.py
src/tf_manager_cpp/src/: sensor_static_tf.cpp  wheel_odom_tf.cpp
