<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_layer</name>
  <version>0.1.0</version>
  <description>Localization layer with wheel odometry, IMU, and EKF filtering for ROS2</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- EKF node -->
  <exec_depend>robot_localization</exec_depend>

  <!-- Cartographer mapping -->
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <!-- launch -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>